--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Dextensify</title>
+    <title>My Drive - Google Drive</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <style>
