--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Dextensify</title>
+    <title>My Drive - Google Drive</title>
+    <link rel="icon" href="drive_2022q3_32dp.ico" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <style>
